--- a/wp-content/themes/divi-ncruralcenter/sass/layouts/_pages.scss
+++ b/wp-content/themes/divi-ncruralcenter/sass/layouts/_pages.scss
@@ -47,12 +47,16 @@
       width: 75%;
       margin: 0;
 
-      .et_pb_text, .et_pb_video, .et_pb_button_alignment_left, .staff-list {
+      .et_pb_text, .et_pb_video, .et_pb_button_module_wrapper, .staff-list {
         padding-left: 20px;
         padding-right: 20px;
-        max-width: 900px;
+        max-width: 66.666%;
         font-size: 18px;
         line-height: 1.7em;
+
+        @media (max-width: 980px) {
+          max-width: none;
+        }
       }
     }
 
